setup npm scripts

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "hada",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "bytes | string | hex conversions",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
+  "types": "/lib/index.d.ts",
   "repository": "https://github.com/crsayen/hada.git",
+  "keywords": ["bytes", "hex", "conversion", "ascii", "array", "bytearray"],
   "author": "Chris Sayen",
   "license": "MIT",
   "files": [
@@ -18,7 +20,12 @@
     "build": "tsc -p src/tsconfig.json",
     "test": "ts-mocha -p test/tsconfig.json test/test.ts",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p src/tsconfig.json ; tslint -p test/tsconfig.json"
+    "lint": "tslint -p src/tsconfig.json ; tslint -p test/tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "devDependencies": {
     "@types/expect": "^24.3.0",
