--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.5",
   "description": "bytes | string | hex conversions",
   "main": "lib/index.js",
-  "types": "/lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/crsayen/hada.git",
   "keywords": [
     "bytes",
